# comfyui-misc

./: .editorconfig  .gitignore  CHANGELOG.md  README.md  README_ja.md  __init__.py  combine_primitives.py  comfyui-manager.json  foreach_primitives.py  package-lock.json  package.json  pyproject.toml  vitest.config.js
.cursor/rules/: changelog.mdc  comfyui-misc-project.mdc  git-workflow.mdc  javascript-extensions.mdc  python-nodes.mdc  testing.mdc
js/: any_output_switch.js  any_switch.js  combine_primitives.js  foreach_primitives.js  split_primitives.js  type_compat.js  utils.js
js/logic/: any-output-switch-layout.js  any-output-switch-restore.js  any-switch-input-order.js  any-switch-inputs.js  input-slot-remap.js  litegraph-type-compat.js  paste-restore.js  primitives-data.js  restore-window.js  select-index-bounds.js  split-primitives-names.js
js/utils/: any-output-slots.js  any-output-switch-restore.js  any-switch-input-order.js  connection-type.js  constants.js  debounce.js  graph-context.js  graph-links.js  graph-walk.js  index.js  inputs.js  litegraph-type-compat.js  naming.js  node-layout.js  node-stabilize.js  primitive-slots.js  primitive-type.js  select-index.js  stabilize-retries.js  trailing-output.js
py/: any_output_switch.py  any_switch.py  combine_primitives.py  foreach_primitives.py  split_primitives.py
py/utils/: __init__.py  naming.py  primitives_data.py
test/js/: any_output_switch.test.js  (+9 more)
utils/: __init__.py  comfy_types.py  context.py  workflow_types.py
web/: any_output_switch.js  any_switch.js  split_primitives.js  type_compat.js
(+28 files in other folders)
